--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -3,6 +3,9 @@ ad.city=City
 ad.created=Created
 ad.description=Description
 ad.location=Location
+ad.message.subject=Votre annonce «{0}» est en ligne
+ad.notice.content=Votre annonce est en attente de validation.
+ad.notice.title=Création d''une annonce
 ad.price=Price
 ad.region=Region
 ad.remuneration=Remuneration
@@ -10,14 +13,14 @@ ad.title=Title
 ad.type=Type
 ad.user=User
 ad.validated=Validated
-application.title=Works & Services
 application.title.logo=<strong>Works</strong> and <strong>Services</strong>
+application.title=Works & Services
 button.cancel=Cancel
 button.change=Change
 button.contact=Contact by email
-button.post=Post ad
 button.edit=Edit
 button.phone=View phone
+button.post=Post ad
 button.registration=Free registration
 button.save=Save
 button.search=Search
@@ -28,29 +31,37 @@ check.newsletter=Free sign up to the newsletter travauxetservices.fr
 check.terms=I have read and agree the <a href="/#!terms">terms and conditions</a>
 connection.remember=Remember me
 connection.signin=Sign in
+contact.message.subject=Votre annonce «{0}» sur travauxetservice.fr
+contact.message.content=
+contact.name=Your name
+contact.email=Your email
+contact.phone=Your phone
+contact.message=Message
 create.account=Create your account
 date.today=Today
 date.yesterday=Yesterday
+error.sending.title=Erreur d''envoie
+error.sending.content=Le message n''a pas pu être envoyé. Votre adresse email n''est pas valide !
 forgot.label=Please enter your email address below to immediately receive a temporary password.
 forgot.password=Forgot your password?
 gender.mr=Mr.
 gender.mrs=Mrs.
 gender.ms=Ms.
-header.published=Published
 header.location=Location
+header.published=Published
 header.title=Ad
 input.categories=Activities
 input.city=City/Zip Code
-input.location=Region/Department
 input.keyword.optional=Keyword(s) key(s) - optional
+input.location=Region/Department
 input.remuneration=Remuneration
 menu.about=About Us
 menu.account=My account
 menu.configuration=Configuration
-menu.post=Placing an ad
 menu.home=Welcome
 menu.information=Legal Information
 menu.offers=Offers
+menu.post=Placing an ad
 menu.preferences=Preferences
 menu.profile=Profile
 menu.requests=Requests
@@ -58,13 +69,7 @@ menu.rules=Rules broadcasts
 menu.terms=Terms & Conditions
 menu.users=Users
 menu.validation=Validation
-message.about=A propos de Travaux et Services
-message.about.text=Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer une annonce gratuite ou consulter nos petites annonces dans différentes catégories... bla bla bla.
 message.email.address.already.exists=An account for this email address already exists
-message.ad.online.subject=Votre annonce «{0}» est en ligne
-message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
-message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
-message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
 published.by=By
 rating.above=Above average
 rating.advice=Advice
@@ -78,28 +83,28 @@ rating.quality=Quality of service
 rating.reception=Reception
 remuneration.day.short=Day
 remuneration.day=at day
-remuneration.week.short=Week
-remuneration.week=by week
-remuneration.month.short=Month
-remuneration.month=monthly
 remuneration.exchange.short=Exchange
 remuneration.exchange=exchange
+remuneration.half.short=Half time
+remuneration.half=half time
+remuneration.month.short=Month
+remuneration.month=monthly
 remuneration.part.short=Parts
 remuneration.part=parts
 remuneration.task.short=Task
 remuneration.task=a task
 remuneration.time.short=Time
 remuneration.time=time
-remuneration.half.short=Half time
-remuneration.half=half time
+remuneration.week.short=Week
+remuneration.week=by week
 sign.in=Sign In
 sign.out=Sign Out
 submenu.abount=Timely
 submenu.administration=Administration
 submenu.my.account=My account
-user.confirmation=Confirmation
 upload.imege=Upload the image here
 uploaded.image=Uploaded Image
+user.confirmation=Confirmation
 user.created=Created
 user.email=Email
 user.firstName=FirstName
@@ -107,12 +112,15 @@ user.gender=Gender
 user.individual=Individual
 user.lastname.description=Or company name
 user.lastname=LastName
+user.message.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
+user.notice.content=Nous vous remercions d’avoir créé un compte sur le site travauxetservices.fr. Afin de valider définitivement celui-ci, vous allez recevoir un mail.
+user.notice.title=Bienvenue !
 user.password=Password
 user.phone=Phone
 user.picture=Picture
 user.pro=Pro.
-user.professional=Professional
 user.professional.question=Are you a professional?
+user.professional=Professional
 user.role=Role
 user.validated=Validated
 validator.confirm.password=confirmation should be identical to the password
