--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -3,6 +3,9 @@ ad.city=Ville
 ad.created=Cr\u00e9\u00e9
 ad.description=Description
 ad.location=Localisation
+ad.message.subject=Votre annonce «{0}» est en ligne
+ad.notice.content=Votre annonce est en attente de validation.
+ad.notice.title=Création d''une annonce
 ad.price=Tarif
 ad.region=R\u00e9gion
 ad.remuneration=R\u00e9mun\u00e9ration
@@ -10,14 +13,14 @@ ad.title=Titre
 ad.type=Type
 ad.user=Utilisateur
 ad.validated=Valid\u00e9
-application.title=Travaux & Services
 application.title.logo=<strong>Travaux</strong> et <strong>Services</strong>
+application.title=Travaux & Services
 button.cancel=Annuler
 button.change=Modifier
 button.contact=Contacter par email
-button.post=Publier cette annonce
 button.edit=Editer
 button.phone=Afficher le téléphone
+button.post=Publier cette annonce
 button.registration=Inscription gratuite
 button.save=Sauvegarder
 button.search=Chercher
@@ -28,29 +31,37 @@ check.newsletter=Je m''inscris gratuitement à la newsletter de travauxetservices
 check.terms=J''ai lu et j''accepte les <a href="/#!terms">conditions générales</a>
 connection.remember=Se souvenir de moi
 connection.signin=Se connecter
+contact.message.subject=Votre annonce «{0}» sur travauxetservice.fr
+contact.message.content=
+contact.name=Votre nom
+contact.email=Votre email
+contact.phone=Votre téléphone
+contact.message=Message
 create.account=Cr\u00e9ez votre compte
 date.today=Aujourd''hui
 date.yesterday=Hier
+error.sending.title=Erreur d''envoie
+error.sending.content=Le message n''a pas pu être envoyé. Votre adresse email n''est pas valide !
 forgot.label=Veuillez entrer votre adresse email ci-dessous pour recevoir immédiatement un mot de passe temporaire.
 forgot.password=Mot de passe oubli\u00e9 ?
 gender.mr=M.
 gender.mrs=Mme
 gender.ms=Mlle.
-header.published=Publi\u00e9 le
 header.location=Localisation
+header.published=Publi\u00e9 le
 header.title=Annonce
 input.categories=Activit\u00e9s
 input.city=Ville/Code postal
-input.location=R\u00e9gion/D\u00e9partement
 input.keyword.optional=Mot(s) cl\u00e9(s) - optionnel
+input.location=R\u00e9gion/D\u00e9partement
 input.remuneration=R\u00e9mun\u00e9ration
 menu.about=Qui sommes-nous
 menu.account=Mon compte
 menu.configuration=Configuration
-menu.post=D\u00e9poser une annonce
 menu.home=Accueil
 menu.information=Infos l\u00e9gales
 menu.offers=Offres
+menu.post=D\u00e9poser une annonce
 menu.preferences=Pr\u00e9f\u00e9rences
 menu.profile=Profile
 menu.requests=Demandes
@@ -58,13 +69,7 @@ menu.rules=R\u00e8gles de diffusions
 menu.terms=Conditions G\u00e9n\u00e9rales
 menu.users=Utilisateurs
 menu.validation=Validation
-message.about=A propos de Travaux et Services
-message.about.text=Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer une annonce gratuite ou consulter nos petites annonces dans différentes catégories... bla bla bla.
 message.email.address.already.exists=Un compte correspondant à cette adresse e-mail existe déjà
-message.ad.online.subject=Votre annonce «{0}» est en ligne
-message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L''\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
-message.user.account.subject=Confirmation d''inscription sur Travaux et Services : bienvenue !
-message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous \u00eatre enregistr\u00e9 sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L''\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
 published.by=Par
 rating.above=Bien
 rating.advice=Conseils
@@ -78,22 +83,22 @@ rating.quality=Qualit\u00e9 de la prestation
 rating.reception=Accueil
 remuneration.day.short=Journ\u00e9e
 remuneration.day=à la journ\u00e9e
-remuneration.week.short=Semaine
-remuneration.week=à la semaine
-remuneration.month.short=Mois
-remuneration.month=au mois
 remuneration.exchange.short=Echange
 remuneration.exchange=\u00e9change
+remuneration.half.short=Demi-heure
+remuneration.half=à la demi-heure
+remuneration.month.short=Mois
+remuneration.month=au mois
 remuneration.part.short=Pi\u00e8ces
 remuneration.part=aux pi\u00e8ces
 remuneration.task.short=Tâche
 remuneration.task=à la tâche
 remuneration.time.short=Heure
 remuneration.time=de l''heure
-remuneration.half.short=Demi-heure
-remuneration.half=à la demi-heure
+remuneration.week.short=Semaine
+remuneration.week=à la semaine
 sign.in=Se connecter
-sign.out=Se Déconnecter
+sign.out=Se déconnecter
 submenu.abount=À propos
 submenu.administration=Administration
 submenu.my.account=Mon compte
@@ -107,12 +112,17 @@ user.gender=Civilit\u00e9
 user.individual=Particulier
 user.lastname.description=Ou raison sociale
 user.lastname=Nom
+user.message.subject=Confirmation d''inscription sur Travaux et Services : bienvenue !
+user.notice.content=Nous vous remercions d'avoir créé un compte sur le site travauxetservices.fr.
+user.notice.title=Bienvenue !
+user.notification.content=Nous vous remercions d'avoir créé un compte sur le site travauxetservices.fr. Afin de valider définitivement celui-ci, vous allez recevoir un mail.
+user.notification.title=Bienvenue !
 user.password=Mot de passe
 user.phone=T\u00e9l\u00e9phone
 user.picture=Image
 user.pro=Pro.
-user.professional=Professionnel
 user.professional.question=Etes-vous un professionnel ?
+user.professional=Professionnel
 user.role=Rôle
 user.validated=Valid\u00e9
 validator.confirm.password=la confirmation doit être identique au mot de passe
