--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -3,9 +3,9 @@ ad.city=City
 ad.created=Created
 ad.description=Description
 ad.location=Location
-ad.message.subject=Votre annonce «{0}» est en ligne
+ad.message.subject=Votre annonce ï¿½{0}ï¿½ est en ligne
 ad.notice.content=Votre annonce est en attente de validation.
-ad.notice.title=Création d''une annonce
+ad.notice.title=Crï¿½ation d''une annonce
 ad.price=Price
 ad.region=Region
 ad.remuneration=Remuneration
@@ -22,6 +22,7 @@ button.edit=Edit
 button.phone=View phone
 button.post=Post ad
 button.registration=Free registration
+button.review=Write a review
 button.save=Save
 button.search=Search
 button.send=Send
@@ -31,7 +32,7 @@ check.newsletter=Free sign up to the newsletter travauxetservices.fr
 check.terms=I have read and agree the <a href="/#!terms">terms and conditions</a>
 connection.remember=Remember me
 connection.signin=Sign in
-contact.message.subject=Votre annonce «{0}» sur travauxetservice.fr
+contact.message.subject=Votre annonce ï¿½{0}ï¿½ sur travauxetservice.fr
 contact.message.content=
 contact.name=Your name
 contact.email=Your email
@@ -41,7 +42,10 @@ create.account=Create your account
 date.today=Today
 date.yesterday=Yesterday
 error.sending.title=Erreur d''envoie
-error.sending.content=Le message n''a pas pu être envoyé. Votre adresse email n''est pas valide !
+error.sending.content=Le message n''a pas pu ï¿½tre envoyï¿½. Votre adresse email n''est pas valide !
+forgot.message.subject=Mot de passe oubliï¿½ sur travauxetservices.fr
+forgot.notification.title=Forgot your password
+forgot.notification.content=Un email vient de vous ï¿½tre envoyï¿½. Vous y trouverez les informations pour modifier votre mot de passe.
 forgot.label=Please enter your email address below to immediately receive a temporary password.
 forgot.password=Forgot your password?
 gender.mr=Mr.
@@ -113,7 +117,7 @@ user.individual=Individual
 user.lastname.description=Or company name
 user.lastname=LastName
 user.message.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
-user.notice.content=Nous vous remercions d’avoir créé un compte sur le site travauxetservices.fr. Afin de valider définitivement celui-ci, vous allez recevoir un mail.
+user.notice.content=Nous vous remercions dï¿½avoir crï¿½ï¿½ un compte sur le site travauxetservices.fr. Afin de valider dï¿½finitivement celui-ci, vous allez recevoir un mail.
 user.notice.title=Bienvenue !
 user.password=Password
 user.phone=Phone
