--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -3,9 +3,9 @@ ad.city=Ville
 ad.created=Cr\u00e9\u00e9
 ad.description=Description
 ad.location=Localisation
-ad.message.subject=Votre annonce «{0}» est en ligne
+ad.message.subject=Votre annonce \u00e9{0}\u00e9 est en ligne
 ad.notice.content=Votre annonce est en attente de validation.
-ad.notice.title=Création d''une annonce
+ad.notice.title=Cr\u00e9ation d''une annonce
 ad.price=Tarif
 ad.region=R\u00e9gion
 ad.remuneration=R\u00e9mun\u00e9ration
@@ -19,30 +19,34 @@ button.cancel=Annuler
 button.change=Modifier
 button.contact=Contacter par email
 button.edit=Editer
-button.phone=Afficher le téléphone
+button.phone=Afficher le t\u00e9l\u00e9phone
 button.post=Publier cette annonce
 button.registration=Inscription gratuite
+button.review=Ecrire un avis
 button.save=Sauvegarder
 button.search=Chercher
 button.send=Envoyer
-button.upload=Télécharger
+button.upload=T\u00e9l\u00e9charger
 button.validate=Valider
-check.newsletter=Je m''inscris gratuitement à la newsletter de travauxetservices.fr
-check.terms=J''ai lu et j''accepte les <a href="/#!terms">conditions générales</a>
+check.newsletter=Je m''inscris gratuitement \u00e0 la newsletter de travauxetservices.fr
+check.terms=J''ai lu et j''accepte les <a href="/#!terms">conditions g\u00e9n\u00e9rales</a>
 connection.remember=Se souvenir de moi
 connection.signin=Se connecter
-contact.message.subject=Votre annonce «{0}» sur travauxetservice.fr
+contact.message.subject=Votre annonce \u00e9{0}\u00e9 sur travauxetservice.fr
 contact.message.content=
 contact.name=Votre nom
 contact.email=Votre email
-contact.phone=Votre téléphone
+contact.phone=Votre t\u00e9l\u00e9phone
 contact.message=Message
 create.account=Cr\u00e9ez votre compte
 date.today=Aujourd''hui
 date.yesterday=Hier
 error.sending.title=Erreur d''envoie
-error.sending.content=Le message n''a pas pu être envoyé. Votre adresse email n''est pas valide !
-forgot.label=Veuillez entrer votre adresse email ci-dessous pour recevoir immédiatement un mot de passe temporaire.
+error.sending.content=Le message n''a pas pu Ãªtre envoy\u00e9. Votre adresse email n''est pas valide !
+forgot.message.subject=Mot de passe oubli\u00e9 sur travauxetservices.fr
+forgot.notification.title=Mot de passe oubli\u00e9
+forgot.notification.content=Un email vient de vous Ãªtre envoy\u00e9. Vous y trouverez les informations pour modifier votre mot de passe.
+forgot.label=Veuillez entrer votre adresse email ci-dessous pour recevoir imm\u00e9diatement un mot de passe temporaire.
 forgot.password=Mot de passe oubli\u00e9 ?
 gender.mr=M.
 gender.mrs=Mme
@@ -69,7 +73,7 @@ menu.rules=R\u00e8gles de diffusions
 menu.terms=Conditions G\u00e9n\u00e9rales
 menu.users=Utilisateurs
 menu.validation=Validation
-message.email.address.already.exists=Un compte correspondant à cette adresse e-mail existe déjà
+message.email.address.already.exists=Un compte correspondant \u00e0 cette adresse e-mail existe d\u00e9j\u00e0
 published.by=Par
 rating.above=Bien
 rating.advice=Conseils
@@ -82,28 +86,28 @@ rating.price=Rapport Qualit\u00e9 / Prix
 rating.quality=Qualit\u00e9 de la prestation
 rating.reception=Accueil
 remuneration.day.short=Journ\u00e9e
-remuneration.day=à la journ\u00e9e
+remuneration.day=\u00e0 la journ\u00e9e
 remuneration.exchange.short=Echange
 remuneration.exchange=\u00e9change
 remuneration.half.short=Demi-heure
-remuneration.half=à la demi-heure
+remuneration.half=\u00e0 la demi-heure
 remuneration.month.short=Mois
 remuneration.month=au mois
 remuneration.part.short=Pi\u00e8ces
 remuneration.part=aux pi\u00e8ces
-remuneration.task.short=Tâche
-remuneration.task=à la tâche
+remuneration.task.short=TÃ¢che
+remuneration.task=a la tÃ¢che
 remuneration.time.short=Heure
 remuneration.time=de l''heure
 remuneration.week.short=Semaine
-remuneration.week=à la semaine
+remuneration.week=a la semaine
 sign.in=Se connecter
-sign.out=Se déconnecter
-submenu.abount=À propos
+sign.out=Se d\u00e9connecter
+submenu.abount=\u00c2 propos
 submenu.administration=Administration
 submenu.my.account=Mon compte
-upload.imege=Téléchargez l'image ici
-uploaded.image=Image téléchargée
+upload.imege=T\u00e9l\u00e9chargez l'image ici
+uploaded.image=Image t\u00e9l\u00e9charg\u00e9e
 user.confirmation=Confirmation
 user.created=Cr\u00e9\u00e9
 user.email=Email
@@ -113,9 +117,9 @@ user.individual=Particulier
 user.lastname.description=Ou raison sociale
 user.lastname=Nom
 user.message.subject=Confirmation d''inscription sur Travaux et Services : bienvenue !
-user.notice.content=Nous vous remercions d'avoir créé un compte sur le site travauxetservices.fr.
+user.notice.content=Nous vous remercions d'avoir cr\u00e9\u00e9 un compte sur le site travauxetservices.fr.
 user.notice.title=Bienvenue !
-user.notification.content=Nous vous remercions d'avoir créé un compte sur le site travauxetservices.fr. Afin de valider définitivement celui-ci, vous allez recevoir un mail.
+user.notification.content=Nous vous remercions d'avoir cr\u00e9\u00e9 un compte sur le site travauxetservices.fr. Afin de valider d\u00e9finitivement celui-ci, vous allez recevoir un mail.
 user.notification.title=Bienvenue !
 user.password=Mot de passe
 user.phone=T\u00e9l\u00e9phone
@@ -123,12 +127,12 @@ user.picture=Image
 user.pro=Pro.
 user.professional.question=Etes-vous un professionnel ?
 user.professional=Professionnel
-user.role=Rôle
+user.role=R\u00f4le
 user.validated=Valid\u00e9
-validator.confirm.password=la confirmation doit être identique au mot de passe
+validator.confirm.password=la confirmation doit Ãªtre identique au mot de passe
 validator.email=l''adresse e-mail n''est pas valide
 validator.required=ce champ est obligatoire
-validator.terms=Vous devez accepter les conditions générales
+validator.terms=Vous devez accepter les conditions g\u00e9n\u00e9rales
 window.connection=Connexion
 window.contact=Message
 window.forgot=Mot de passe oubli\u00e9
